# IncreUpdateAnd

./: .gitignore  README  old.apk
app/: CMakeLists.txt  app-release.apk  build.gradle  duxiwei.jks
app/src/androidTest/java/com/duxiwei/increupdateand/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: bspatch.c
app/src/main/java/com/duxiwei/increupdateand/: MainActivity.java
app/src/main/java/com/duxiwei/util/: ApkUpdate.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/duxiwei/increupdateand/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
